[workspace]
members = [
    ".",
    # "plugin-bindings/*",
    # "plugin-interfaces/*",
    # "libp2peasy-plugin-dev-kit",
]

[package]
name = "libp2peasy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "libp2peasy"
path = "./src/bin/libp2peasy/main.rs"

[dependencies]
anyhow = "1.0.69"
bytes = "1"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10"
tokio = { version = "1.26.0", features = ["rt", "macros", "signal"] }
tokio-stream = "0.1"
either = "1.8"
void = "1.0.2"
async-trait = "0.1"
futures = "0.3.27"
futures-timer = "3.0.2"
log = "0.4.17"
rand = "0.8.5"
prometheus-client = "0.19.0"
tide = "0.16"
base64 = "0.20"
zeroize = "1"
serde = "1.0.160"
serde_derive = "1.0.125"
serde_json = "1.0"

[dependencies.libp2p]
version = "0.52.0"
features = [
    "autonat",
    "ping",
    "dns",
    "kad",
    "gossipsub",
    "identify",
    "relay",
    "macros",
    "metrics",
    "noise",
    "tcp",
    "tokio",
    "websocket",
    "yamux",
    "ed25519",
    "rsa",       # needed for noise upgrade for RSA nodes
]

[dependencies.libp2p-identity]
version = "0.2.1"
features = ["ed25519", "peerid"]

[dependencies.libp2p-quic]
version = "0.8.0-alpha"
features = ["tokio"]

[dependencies.libp2p-webrtc]
version = "0.6.0-alpha"
features = ["tokio", "pem"]

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Enable Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
