[package]
name = "libp2peasy-plugin-dev-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
serde_json = "1.0"

[dev-dependencies]
extism = "0.4.0"
vowels-interface = { path = "../plugins/vowels-interface" }
